feat(java): add the NetworkTables bridge